[project]
name = "asqav-mcp"
version = "0.1.0"
description = "MCP server for Asqav AI agent governance"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
asqav-mcp = "asqav_mcp:main"